--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,13 @@
             "request": "launch",
             "mode": "auto",
             "program": "./hello"
+        },
+        {
+            "name": "Gin Main",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "./web-service-gin"
         }
     ]
 }
